Add Gotenberg service configuration to render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -51,7 +51,19 @@ services:
         fromDatabase:
           name: n8n-db
           property: user
-
+  
+  - type: web
+    plan: free
+    runtime: image
+    name: gotenberg
+    image:
+      url: gotenberg/gotenberg:8
+    envVars:
+      - key: DISABLE_GOOGLE_CHROME
+        value: "0"
+    ports:
+      - 3000
+      
 databases:
   - name: n8n-db
     plan: free
